--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
     overflow: hidden;
     border-radius: 40px;
     border: 4px solid #364587;
-    background: url(./assets/pattern.png);
+    background: url(./assets/pattern.webp);
     background-repeat: no-repeat;
     background-size: cover;
 }
