--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ a{
 }
 
 .nav-button {
+    font-family: "Schoolbell";
     display: flex;
     transform: rotate(-0.88deg);
     padding: 16px 64px;
@@ -107,6 +108,7 @@ a{
 }
 
 .cta-button{
+    font-family: "Schoolbell";
     display: flex;
     transform: rotate(-0.88deg);
     padding: 16px 64px;
