adding new page links

--- a/src/index.css
+++ b/src/index.css
@@ -108,15 +108,15 @@
 
 @layer components {
   .nav-button {
-    @apply font-baloo flex -rotate-[0.88deg] px-16 py-4 justify-center items-center gap-3 cursor-pointer rounded-xl border border-tumlet-blue bg-white shadow-[8px_8px_0px_0px_#BAC1E1] transition-all duration-300;
+    @apply font-baloo flex -rotate-[0.88deg] px-16 py-4 justify-center items-center gap-3 cursor-pointer rounded-xl border border-tumlet-blue bg-white shadow-[8px_8px_0px_0px_#F8B3A6] transition-all duration-300;
   }
   
   .nav-button:hover {
-    @apply -translate-x-1 -translate-y-1 bg-[#fbfcff];
+    @apply -translate-x-1 -translate-y-1 bg-[#F8B3A6];
   }
   
   .nav-button:active {
-    @apply translate-x-0 translate-y-0 shadow-[2px_2px_0px_0px_#BAC1E1];
+    @apply translate-x-0 translate-y-0 shadow-[2px_2px_0px_0px_#F8B3A6];
   }
 
   .cta-button {
